# nfs-ganesha

./: project.config
src/: CMakeLists.txt  nfs-ganesha.spec-in.cmake
src/FSAL/: access_check.c  commonlib.c  default_methods.c  fsal_convert.c  fsal_helper.c  fsal_manager.c
src/FSAL/FSAL_CEPH/: handle.c  internal.c
src/FSAL/FSAL_GLUSTER/: gluster_internal.c  handle.c  main.c
src/FSAL/FSAL_GPFS/: file.c  fsal_ds.c  fsal_up.c  gpfs_methods.h  handle.c  main.c
src/FSAL/FSAL_HPSS/: file.c  handle.c  xattrs.c
src/FSAL/FSAL_LUSTRE/: handle.c
src/FSAL/FSAL_MEM/: CMakeLists.txt  mem_handle.c  memfs_export.c  memfs_handle.c  memfs_main.c  memfs_methods.h
src/FSAL/FSAL_PROXY/: handle.c
src/FSAL_UP/: fsal_up_top.c  fsal_up_utils.c
src/MainNFSD/: 9p_dispatcher.c  9p_rdma_callbacks.c  CMakeLists.txt  nfs_init.c  nfs_rpc_dispatcher_thread.c
src/RPCAL/: nfs_dupreq.c
src/SAL/: nfs4_clientid.c  nfs4_owner.c  nfs4_recovery.c  nfs4_state.c  nfs4_state_id.c  nlm_state.c  state_deleg.c  state_layout.c  state_lock.c  state_misc.c  state_share.c
src/cache_inode/: cache_inode_create.c  cache_inode_misc.c  cache_inode_setattr.c
src/config_parsing/: conf_url.c
src/config_samples/: config.txt
src/include/: 9p.h  abstract_mem.h  cache_inode.h  export_mgr.h  fsal.h  fsal_api.h  fsal_convert.h  fsal_types.h  fsal_up.h  nfs_convert.h  nfs_file_handle.h  nfs_proto_data.h  nfs_proto_tools.h  nlm_util.h  sal_data.h  sal_functions.h
src/support/: export_mgr.c  exports.c  nfs4_acls.c  nfs_convert.c  nfs_creds.c  nfs_filehandle_mgmt.c  nfs_read_conf.c  server_stats.c
(+114 files in other folders)
